# fabric-data-transformation

./: .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  column_validation_analysis.md  create_test_models.py  demo_enhanced_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.py  transform.bat
.state/: dev_state.json  prod_state.json
configuration/: README.md  features.json  pyproject.toml  versions.json
configuration/.build/: b2s_dag.html
configuration/.build/B2S/: FCT_DEMANDSTORAGE.json  FCT_FORECASTCYCLE.json  FCT_FORECASTGROUP.json  FCT_FORECASTITEM.json  FORECASTITEM.json
configuration/0_product/B2S/: FCT_FORECASTCYCLE.v6_properties.json5  FORECASTITEM.v7spec.json5
configuration/1_Industry/B2S/: FCT_FORECASTITEM.demandfamily.json5
configuration/2_Customer/B2S/: FCT_FORECASTITEM.part1.yaml  FCT_FORECASTITEM.update_custom.json5
configuration/buildtools/: b2s.py  build.py  dag_util.py  merge_utils.py  sql_utils.py
docs/: yaml_config.md
fixed_lineage_test/: column_lineage.dot  enhanced_lineage_report.json  interactive_lineage.html  lineage.dot
lineage_output/: column_lineage.dot  enhanced_lineage_report.json  interactive_lineage.html  lineage_report.json
my_output/: column_lineage.dot  enhanced_lineage_report.json  interactive_lineage.html  lineage.dot  lineage_report.json
my_test_models/: config.yaml
my_test_models/bronze/: raw_forecast_cycle.yaml
my_test_models/ctes/: active_forecast_cycles.yaml
src/data_transformation_tool/: cli.py  (+4 more)
test_output/: lineage_report.json
tests/: test_column_validator.py
(+80 files in other folders)
